--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
 
   <div class="caption">Massy Ferguson</div>
   <p>Exemple simple pour s'entraîner avec Git et GitHub.</p>
+  <p>Exemple simple pour s'entraîner avec Git et GitHub.</p>
 </body>
 </html>
